# A1-Voiceflow

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yaml  remote_up.sh
api/: AGENTS.md  Dockerfile  app.py  constants.py  sdk_expose.py
api/db/: campaign_client.py  models.py  organization_usage_client.py  workflow_run_client.py
api/errors/: __init__.py
api/mcp_server/: auth.py  instructions.py  server.py  tracing.py
api/routes/: agent_stream.py  campaign.py  organization_usage.py  public_agent.py  telephony.py  tool.py  user.py  webrtc_signaling.py  workflow.py  workflow_embed.py  workflow_text_chat.py
api/services/: mps_service_key_client.py  quota_service.py
api/tests/: test_a1_voiceflow_sdk.py  test_mcp_docs_search.py  (+14 more)
docs/: README.md  docs.json
examples/: README.md
scripts/: AGENTS.md  generate_sdk.sh  release_sdks.sh  rolling_update.sh  run_a1_voiceflow_init.sh  setup_custom_domain.sh  setup_fork.sh  setup_local.ps1  setup_local.sh  setup_pipecat.sh  setup_remote.sh  setup_requirements.sh  start_services.sh  start_services_dev.sh  start_services_docker.sh  stop_services.sh  update_remote.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/a1_voiceflow_sdk/: __init__.py  _generated_client.py  _generated_models.py  client.py  codegen.py  errors.py  workflow.py
sdk/python/src/a1_voiceflow_sdk/typed/: __init__.py  _base.py  agent_node.py  end_call.py  global_node.py  qa.py  start_call.py  trigger.py  tuner.py  webhook.py
ui/: AGENTS.md  Dockerfile  next.config.ts
(+109 files in other folders)
