[project]
name = "a1-voiceflow-sdk"
version = "0.1.6"
description = "Typed builder for A1 Voiceflow voice-AI workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "A1 Tech Solution", email = "contact@a1techsolution.com" },
]
keywords = ["a1-voiceflow", "voice-ai", "workflow", "sdk", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://voiceflow.a1techsolution.com"
Documentation = "https://voiceflow-docs.a1techsolution.com"
Repository = "https://github.com/Ali-Hamas/A1-Voiceflow"

[project.scripts]
a1-voiceflow-sdk-codegen = "a1_voiceflow_sdk.codegen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a1_voiceflow_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

